# libvideo-streaming

./: CMakeLists.txt  README.md  atom.mk
include/video-streaming/: vstrm.h  vstrm_events.h  vstrm_frame.h  vstrm_h264_sei_streaming.h  vstrm_receiver.h  vstrm_sender.h  vstrm_video_stats.h
src/: vstrm_clock_delta.c  vstrm_clock_delta.h  vstrm_dbg.c  vstrm_event.c  vstrm_event.h  vstrm_frame.c  vstrm_h264_sei_streaming.c  vstrm_priv.h  vstrm_receiver.c  vstrm_rtcp_app.h  vstrm_rtp_h264.h  vstrm_rtp_h264_rx.c  vstrm_rtp_h264_tx.c  vstrm_sender.c  vstrm_session_metadata.c  vstrm_video_stats.c  vstrm_video_stats_priv.h
tests/: vstrm_test.c  vstrm_test.h  vstrm_test_receiver.c  vstrm_test_sender.c  vstrm_test_socket.c
tools/: rtp2pcap.py
